--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@g-loot/react-tournament-brackets": "^1.0.31-rc",
-    "@mui/icons-material": "^5.15.21",
-    "@mui/material": "^5.15.21",
+    "@mui/icons-material": "^6.0.0",
+    "@mui/lab": "^6.0.0-beta.8",
+    "@mui/material": "^6.0.0",
     "@tanstack/react-query": "^5.51.9",
     "@tanstack/react-router": "^1.44.4",
     "axios": "^1.7.2",
